--- a/ejs/parcials/head.ejs
+++ b/ejs/parcials/head.ejs
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="<%= otherLang %>images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="<%= otherLang %>images/favicon.ico" type="image/x-icon" />
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300">
