--- a/ejs/contacts.ejs
+++ b/ejs/contacts.ejs
@@ -33,7 +33,7 @@
                 </address>
                 <address class="contacts-address fadeIn">
                     <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135"> +351
-                            225 432 135/6</a></span>
+                            225 432 135/6</a><sup class="phone_sup">1</sup></span>
                     <span class="wrapper-info"><span class="wide">Fax:</span> +351 225 432 209</span>
                     <span class="wrapper-info">E-mail:
                         <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
