--- a/ejs/contacts_santo_tirso.ejs
+++ b/ejs/contacts_santo_tirso.ejs
@@ -33,7 +33,7 @@
                 </address>
                 <address class="contacts-address fadeIn">
                     <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135"> +351
-                            252 850 480</a></span>
+                            252 850 480</a><sup class="phone_sup">1</sup></span>
                     <span class="wrapper-info">E-mail:
                         <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
                     </span>
