--- a/ejs/parcials/footer.ejs
+++ b/ejs/parcials/footer.ejs
@@ -27,6 +27,14 @@
             </ul>
         </nav>
     </div>
+    <div class="footer_phone">
+        <p><sup class="phone_sup">1</sup>
+            <%= footer.privacy.landline %>
+        </p>
+        <p><sup class="phone_sup">2</sup>
+            <%= footer.privacy.phone %>
+        </p>
+    </div>
     <div class="privacy-block fade-in">
         <a href="index.html">
             <%= footer.privacy.index %>
