--- a/ejs/parcials/head.ejs
+++ b/ejs/parcials/head.ejs
@@ -13,3 +13,13 @@
 <link rel="stylesheet" href="<%= otherLang %>../css/styles.css">
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-225478188-1">
+</script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-225478188-1');
+</script>
