--- a/ejs/parcials/header.ejs
+++ b/ejs/parcials/header.ejs
@@ -208,19 +208,13 @@
         </span>
         <a href="tel:00351225432135">
             <address>
-                <%= header.phone.landline %>
+                <%= header.phone.landline %><sup class="phone_sup">1</sup>
             </address>
         </a>
         <a href="tel:00351915424413">
             <address>
-                <%= header.phone.number %>
+                <%= header.phone.number %><sup class="phone_sup">2</sup>
             </address>
         </a>
-        <p>
-            <%= header.phone.text %>
-        </p>
-        <p>
-            <%= header.phone.text2 %>
-        </p>
     </div>
 </header>
