--- a/public/ejs/agreements.ejs
+++ b/public/ejs/agreements.ejs
@@ -18,14 +18,14 @@
 =========================================================-->
         <section id="content">
             <div class="overlay"></div>
-            <div class="wrapper6">
+            <div class="wrapper1">
                 <div class="heading1 fade-in">
                     <h2>
                         <%= agreements.title %>
                     </h2>
                 </div>
             </div>
-            <div class="wrapper6 wrapper6__inset1">
+            <div class="wrapper1 wrapper6__inset1">
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://advancecare.pt/" target="_blank">
@@ -64,8 +64,7 @@
                         <p>&brvbar Cimpor - Cimentos de Portugal, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/eurovida.jpg"
-                            alt="Eurovida – Companhia de Seguros de Vida, S.A" />
+                        <img src="../images/eurovida.jpg" alt="Eurovida – Companhia de Seguros de Vida, S.A" />
                         <p>&brvbar Eurovida – Companhia de Seguros de Vida, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
@@ -85,13 +84,11 @@
                         <p>&brvbar Logo Seguros</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/lusitania.png"
-                            alt="Lusitania - Companhia de Seguros, S.A." />
+                        <img src="../images/lusitania.png" alt="Lusitania - Companhia de Seguros, S.A." />
                         <p>&brvbar Lusitania - Companhia de Seguros, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/mgen.png"
-                            alt="MGEN - Mutuelle Générale de l'Éducation Nationale" />
+                        <img src="../images/mgen.png" alt="MGEN - Mutuelle Générale de l'Éducation Nationale" />
                         <p>&brvbar MGEN - Mutuelle Générale de l'Éducation Nationale</p>
                     </div>
                     <div class="insurence fade-in">
@@ -99,8 +96,7 @@
                         <p>&brvbar N Seguros, S.A</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../images/popular.png"
-                            alt="Popular Seguros- Companhia de Seguros, S.A. " />
+                        <img src="../images/popular.png" alt="Popular Seguros- Companhia de Seguros, S.A. " />
                         <p>&brvbar Popular Seguros- Companhia de Seguros, S.A. </p>
                     </div>
                     <div class="insurence fade-in">
@@ -293,6 +289,7 @@
             <script src="../js/buttonOnAgreements.js"></script>
             <script src="../js/language.js"></script>
             <script src="../js/login.js"></script>
+            <script src="../js/callmeButton.js"></script>
 </body>
 
 </html>
