--- a/public/ejs/parcials/footer.ejs
+++ b/public/ejs/parcials/footer.ejs
@@ -4,10 +4,10 @@
             <ul class="socials1">
                 <li class="fade-in">
                     <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
-                            class="fa fa-facebook"></i></a>
+                            class="fab fa-facebook"></i></a>
                 </li>
                 <li class="fade-in"><a href="https://www.instagram.com/clinica_gynebe/" target="_blank"><i
-                            class="fa fa-instagram"></i></a></li>
+                            class="fab fa-instagram"></i></a></li>
             </ul>
         </div>
         <nav>
