--- a/public/ejs/parcials/head.ejs
+++ b/public/ejs/parcials/head.ejs
@@ -1,12 +1,15 @@
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="<%= otherLang %>favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- build:css({.tmp,src}) css/style.css -->
 <link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.min.css">
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/styles.css">
+<link rel="stylesheet" href="/css/reset.css">
+<link rel="stylesheet" href="/css/styles.css">
 <!-- endbuild -->
+
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<meta name="referrer" content="no-referrer-when-downgrade"> <!-- ELIMINAR ISTO DEPOIS-->
