--- a/public/ejs/ac.ejs
+++ b/public/ejs/ac.ejs
@@ -159,6 +159,7 @@
             <script src="../js/cv.js"></script>
             <script src="../js/language.js"></script>
             <script src="../js/login.js"></script>
+            <script src="../js/callmeButton.js"></script>
 
 </body>
 
