--- a/public/ejs/contacts_santo_tirso.ejs
+++ b/public/ejs/contacts_santo_tirso.ejs
@@ -6,7 +6,7 @@
         <%= head.contacts_santo_tirso %>
     </title>
     <%- include("parcials/head") %>
-        <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 
@@ -86,6 +86,7 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
+            <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
@@ -93,6 +94,7 @@
             <script src="../js/mapST.js"></script>
             <script src="../js/language.js"></script>
             <script src="../js/login.js"></script>
+            <script src="../js/callmeButton.js"></script>
 </body>
 
 </html>
