--- a/public/ejs/gallery.ejs
+++ b/public/ejs/gallery.ejs
@@ -286,6 +286,7 @@
             <script src="../js/gallery.js"></script>
             <script src="../js/language.js"></script>
             <script src="../js/login.js"></script>
+            <script src="../js/callmeButton.js"></script>
 </body>
 
 </html>
