--- a/public/ejs/index.ejs
+++ b/public/ejs/index.ejs
@@ -243,8 +243,7 @@
                 <script src="../js/scrollDown.js"></script>
                 <script src="../js/language.js"></script>
                 <script src="../js/login.js"></script>
-                <script src="https://apis.google.com/js/platform.js" async defer></script>
-
+                <script src="../js/callmeButton.js"></script>
     </body>
 
     </html>
