--- a/public/ejs/mca.ejs
+++ b/public/ejs/mca.ejs
@@ -213,6 +213,7 @@
             <script src="../js/cv.js"></script>
             <script src="../js/language.js"></script>
             <script src="../js/login.js"></script>
+            <script src="../js/callmeButton.js"></script>
 </body>
 
 </html>
