--- a/public/ejs/privacy.ejs
+++ b/public/ejs/privacy.ejs
@@ -100,6 +100,7 @@
             <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/language.js"></script>
             <script src="../js/login.js"></script>
+            <script src="../js/callmeButton.js"></script>
 </body>
 
 </html>
