--- a/public/ejs/specialties.ejs
+++ b/public/ejs/specialties.ejs
@@ -344,6 +344,7 @@
             <script src="../js/buttonOnSpecialties.js"></script>
             <script src="../js/language.js"></script>
             <script src="../js/login.js"></script>
+            <script src="../js/callmeButton.js"></script>
 </body>
 
 </html>
