--- a/public/ejs/parcials/head.ejs
+++ b/public/ejs/parcials/head.ejs
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
-<link rel="icon" href="<%= otherLang %>favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
