--- a/ejs/parcials/head.ejs
+++ b/ejs/parcials/head.ejs
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="OEVLYF1syXniuZUJm71qzdBYcrIBaj4T4WNPHz0m-g0" />
 
 <!-- build:css({.tmp,src}) css/style.css -->
 <link rel="stylesheet" href="<%= otherLang %>../css/reset.css">
@@ -14,6 +15,16 @@
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-225478188-1">
+</script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-225478188-1');
+</script>
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-225478188-1">
 </script>
 <script>
